# colt-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: cmake-arm.yml  cmake-linux-arm.yml  cmake-linux-x86_64.yml  cmake-multi-platform.yml  cmake-windows-platform.yml  cmake-windows-x86_64.yml  cmake.yml  cmake_clang14.yml  cmake_clang15.yml  cmake_clang16.yml  cmake_g++11.yml  cmake_g++12.yml  cmake_gcc12.yml  cmake_msvc.yml  codeql.yml  msvc.yml  scorecard.yml
include/: coltcpp.h
include/cmd/: parse_args.h
include/colt/: config.h  debugging.h  hash.h  macros.h  typedefs.cpp  typedefs.h  versions.h
include/colt/algo/: detect_simd.h  iterator.h
include/colt/alpha/: file.cpp  file.h  mmap.cpp  mmap.h  units.h
include/colt/bit/: bitfields.h  detect_simd.h  endian.h  operations.h
include/colt/dsa/: common.h  expect.h  iterator.h  map.h  option.h  set.h  smart_pointers.h  string.cpp  string.h  string_view.h  trie.h  unicode.cpp  unicode.h  vector.h
include/colt/io/: ansi_color.h  args_parsing.h  console_effect.cpp  console_effect.h  dynamic_lib.cpp  dynamic_lib.h  file.cpp  file.h  mmap.cpp  mmap.h  mmap_file.cpp  mmap_file.h  parse.h  print.h  subprocess.cpp  subprocess.h
include/colt/macro/: assert.h  macro.h  on_scope_exit.h
include/colt/math/: math.h
include/colt/mem/: allocator_ref.h  allocator_traits.h  block.h  composable_alloc.h  simple_alloc.h
include/colt/meta/: map.h  reflect.h  string_literal.h  traits.h
include/colt/num/: big_int.h  big_rational.h  bitfields.h  check_overflow.h  math.h  num.h  overflow.h  typedefs.h
include/colt/os/: dynamic_lib.cpp  dynamic_lib.h  main.cpp  mmap_file.cpp  mmap_file.h
include/colt/uni/: unicode.cpp  unicode.h  unicode_types.h
include/colt/unicode/: general_category.h  properties.h  propvalues.h  unicode.cpp  unicode.h  unicode_types.h
include/colt2/: debugging.cpp  overflow.h  types.cpp  types.h
include/io/: ansi_color.h  color.h  input.cpp  input.h  print.h
include/math/: math.h
include/mem/: allocator_traits.h  block.h  composable_alloc.h  global_alloc.h  simple_alloc.h  sizes.h
include/meta/: map.h  rtti.h  string_literal.h  traits.h  type_list.h
include/refl/: enum.h  refl.h
include/str/: ascii.h  distance.h  parse.h
include/structs/: expect.h  helper.h  list.h  map.h  option.h  set.h  span.h  static_vector.h  string.h  string_view.h  unique_ptr.h  vector.h
include/util/: assert_true.h  benchmark.h  contracts.h  debug_level.h  hash.h  macro.h  on_exit.h  params.h  typedefs.h  util.h  volatile.h
resources/: CTestCustom.cmake  cmake_colt_config.in  toolchain-arm64.cmake
scripts/: cross_compile_arm.py  generate_uni_table.py
scripts/unicode/: UCD.md  colt.py  cxx_unicode_data.py  parseunicode.py  unicodedata_to_cxx.py
test/: CMakeLists.txt  includes.h  main.cpp  run_tests.cpp  test_run.cpp
test/bit/: test_bitfields.cpp  test_endian.cpp
test/dsa/: test_expect.cpp  test_option.cpp  test_smart_pointers.cpp  test_string.cpp  test_string_view.cpp  test_unicode.cpp
test/io/: test_args_parsing.cpp
test/math/: test_math.cpp
test/meta/: test_map.cpp  test_reflect.cpp
test/num/: test_big_int.cpp  test_math.cpp
test/os/: test_dynamic_lib.cpp  test_mmap_file.cpp
test/uni/: test_unicode.cpp
